--- a/src/main.css
+++ b/src/main.css
@@ -7,7 +7,7 @@ body {
 }
 
 h1{
-    margin: auto;
+    margin-bottom: 0;
 }
 
 .login-box{
@@ -29,11 +29,9 @@ h1{
 .login-form{
     width: 80%;
     height: 80%;
-    margin: auto;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin-top: 20px;
 }
 
 .login-form button{
@@ -63,13 +61,18 @@ h1{
     height: 50%;
     margin: 0 auto;
     margin-top: 1rem;
-    margin-bottom: 1rem;
+    margin-bottom: 2rem;
     caret-color: white;
     background-color: transparent;
     border: none;
     border-bottom: 1px solid white;
     outline: none;
     font-size: 15px;
+}
+
+.login-form input::placeholder{
+    color: black;
+    font-size: 17px;
 }
 
 a {
