--- a/src/main.css
+++ b/src/main.css
@@ -4,6 +4,7 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     font-family: 'Poppins', sans-serif;
+    overflow: hidden;
 }
 
 h1{
@@ -32,22 +33,6 @@ h1{
     display: flex;
     flex-direction: column;
     justify-content: center;
-}
-
-.login-form button{
-    background-color: #360e8c;
-    border: none;
-    color: white;
-    width: 35%;
-    height: 10%;
-    margin: 0 auto;
-    border-radius: 12px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin-bottom: 25px;
-    margin-top: 25px;
 }
 
 .login-form label{
@@ -98,4 +83,65 @@ a::after {
 a:hover::after {
     transform: scaleX(1);
     transform-origin: bottom left;
+  }
+
+  .login-form button{
+    background-color: #3C3C3C;
+    border: none;
+    color: white;
+    margin: 0 auto;
+    border-radius: 12px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin-bottom: 25px;
+    margin-top: 25px;
+    line-height: 50px;
+    height: 50px;
+    text-align: center;
+    width: 200px;
+    cursor: pointer;
+}
+
+.button-login {
+    color: #FFF;
+    transition: all 0.5s;
+    position: relative;
+  }
+
+.button-login::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    background-color: rgba(255,255,255,0.1);
+    transition: all 0.3s;
+  }
+
+.button-login:hover::before {
+    opacity: 0 ;
+    transform: scale(0.5,0.5);
+  }
+
+.button-login::after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    opacity: 0;
+    transition: all 0.3s;
+    border: 1px solid rgba(255,255,255,0.5);
+    transform: scale(1.2,1.2);
+  }
+
+.button-login:hover::after {
+    opacity: 1;
+    transform: scale(1,1);
   }
