--- a/src/main.css
+++ b/src/main.css
@@ -85,7 +85,7 @@ a:hover::after {
     transform-origin: bottom left;
   }
 
-  .login-form button{
+.login-form button{
     background-color: #3C3C3C;
     border: none;
     color: white;
@@ -98,9 +98,9 @@ a:hover::after {
     margin-bottom: 25px;
     margin-top: 25px;
     line-height: 50px;
-    height: 50px;
+    height: 14%;
     text-align: center;
-    width: 200px;
+    width: 65%;
     cursor: pointer;
 }
 
@@ -112,11 +112,13 @@ a:hover::after {
 
 .button-login::before {
     content: '';
+    text-align: center;
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
+    border-radius: 12px;
     z-index: 1;
     background-color: rgba(255,255,255,0.1);
     transition: all 0.3s;
@@ -145,3 +147,4 @@ a:hover::after {
     opacity: 1;
     transform: scale(1,1);
   }
+
