--- a/src/main.css
+++ b/src/main.css
@@ -18,13 +18,14 @@ h1{
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    border: 1px solid white;
+    border: 0px solid white;
     border-radius: 15%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     backdrop-filter: blur(3px);
+    background-color: rgba(129, 140, 132, 0.4);
 }
 
 .login-form{
